# Fake-Bank

backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f4d81fe673bf_initial.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accounts.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  account.py  address.py  transaction.py  user.py  users.py
backend/app/repositories/: account.py  user.py
backend/app/schemas/: account.py  accounts.py  address.py  user.py  users.py
backend/app/services/: account.py  user.py
backend/tests/: conftest.py
backend/tests/factories/schemas/: account.py  address.py  user.py
backend/tests/unit/models/: test_account_model.py  test_transaction_model.py  test_user_model.py
backend/tests/unit/schemas/: test_account_schema.py  test_address_schema.py  test_user_schema.py
