[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-bank-backend"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "Tanuj Guha Thakurta", email = "tanuj414junat@gmail.com"}
]
dependencies = [
    "fastapi>=0.120.4",
    "sqlalchemy>=2.0.44",
]
