[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-bank-backend"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "Tanuj Guha Thakurta", email = "tanuj414junat@gmail.com"}
]
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[tool.setuptools]
packages = { find ={}}

[tool.setuptools.package-dir]
app = "app"
